--- a/ESP32code/platformio.ini
+++ b/ESP32code/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	olikraus/U8g2@^2.35.19
+	esphome/AsyncTCP-esphome@^2.1.3
+	ottowinter/ESPAsyncWebServer-esphome@^3.2.2
